# regmonkey-presentation

./: .gitignore  .nojekyll  CLAUDE.md  README.md  _quarto.yml  _slide.yml  about.html  about.qmd  index.html  index.qmd  listings.json  package-lock.json  pyproject.toml  reveal2pdf.sh  robots.txt  search.json  sitemap.xml  slide2pptx.sh  styles.css  styles.scss
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: fix_documentation.yml  fix_typos.yml
.github/workflows/: publish.yml
_extensions/inject_anychart_js/: _extension.yml  inject_anychart_js.lua
include/: custom_section.html  mathjax.html  setup_googletagmanager.html  setup_googletagmanager_body.html
js/: horizontal_tree.js  regmonkey_abstract_summary.js  regmonkey_gantt_chart.js  regmonkey_index_summary.js  regmonkey_vuetify_timeline.js  regmonkey_waterfall.js  regmonkey_yaml2grouptable.js  resize_keypoints_block.js  yaml2table.js
posts/: _metadata.yml
posts/2026-03-19-RLHF/: index.html  (+1 more)
scripts/: slide2pptx.mjs
scss/: revealjs.scss
style/: dark.scss  light.scss  revealjs.css  revealjs.scss
template/: analysis-summary.html  analysis-summary.qmd  azureblue-summary.html  azureblue-summary.qmd  book-template.html  book-template.qmd  concept-explanation.html  concept-explanation.qmd  hop-step-jump.html  hop-step-jump.qmd  info-box-with-two-cols.html  info-box-with-two-cols.qmd  lecture-index-slide.html  message-card.html  message-card.qmd  meta-data-slide.html  meta-data-slide.qmd  pentagon-squared-box.html  pentagon-squared-box.qmd  three-horizontal-points.html  three-horizontal-points.qmd
(+197 files in other folders)
