[project]
name = "regmponkey-presentation"
version = "0.1.0"
description = "quarto presentation with python"
authors = [
    {name = "RyoNak",email = "nakagamiryo0901@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev-default.dependencies]
ipykernel = "^6.29.5"
jinja2 = "^3.1.6"
nbformat = "^5.10.4"
ruff = "^0.11.7"
plotly = "^6.0.1"
matplotlib = "^3.10.1"
