[project]
name = "regmponkey-presentation"
version = "0.1.0"
description = "quarto presentation with python"
authors = [
    { name = "RyoNak", email = "nakagamiryo0901@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "pyyaml>=6.0.2,<7.0.0",
    "nbclient>=0.10.2,<0.11.0",
    "jupyter>=1.1.1,<2.0.0",
    "scipy>=1.17.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "jinja2>=3.1.6,<4",
    "nbformat>=5.10.4,<6",
    "ruff>=0.11.7,<1",
    "plotly>=6.0.1,<7",
    "matplotlib>=3.10.1,<4",
]

[tool.uv]
package = false
